src/objects/External_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Configurator_Name__c</fullName>
        <label>Configurator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JSON_QuoteConfig__c</fullName>
        <label>JSON QuoteConfig</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Creation_Date__c</fullName>
        <label>Quote Line Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Creation_Errors__c</fullName>
        <label>Quote Line Creation Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Creation_Warnings__c</fullName>
        <label>Quote Line Creation Warnings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>External Configurations</relationshipLabel>
        <relationshipName>External_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WS_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WS Request</label>
        <referenceTo>WS_Request__c</referenceTo>
        <relationshipLabel>External Configurations</relationshipLabel>
        <relationshipName>External_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>External Configuration</label>
    <nameField>
        <displayFormat>EC-{0}</displayFormat>
        <label>External Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>